Salvando perfis de usarios na base de dados