@@ -2,6 +2,7 @@ package com.nelioalves.cursomc.services;
 
 import com.nelioalves.cursomc.domain.*;
 import com.nelioalves.cursomc.domain.enums.EstadoPagamento;
+import com.nelioalves.cursomc.domain.enums.Perfil;
 import com.nelioalves.cursomc.domain.enums.TipoCliente;
 import com.nelioalves.cursomc.repositories.*;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -104,17 +105,24 @@ public class DBService {
         cidadeRepository.saveAll(Arrays.asList(c1, c2, c3));
         //No campo de email usar um email válido
         Cliente cli1 = new Cliente(null, "Maria Silva", "maria@gmail.com", "0234598771", TipoCliente.PESSOAFISICA, pe.encode("123"));
-
         cli1.getTelefones().addAll(Arrays.asList("34111234", "34114321"));
+
+        Cliente cli2 = new Cliente(null, "Ana Silva", "anasilva@gmail.com", "47481671060", TipoCliente.PESSOAFISICA, pe.encode("123"));
+        cli2.getTelefones().addAll(Arrays.asList("34112242", "3411109"));
+        cli2.addPerfil(Perfil.ADMIN);
 
         Endereco e1 = new Endereco(null, "Rua Flores", "300", "Ap 202", "Jardim", "54900000", cli1, c1);
 
         Endereco e2 = new Endereco(null, "Avenida Matos", "105", "Sala 8", "Centro", "54900400", cli1, c2);
 
+        Endereco e3 = new Endereco(null, "Avenida Floriano", "2106", null, "Centro", "281777012", cli2, c2);
+
         cli1.getEnderecos().addAll(Arrays.asList(e1, e2));
 
-        clienteRepository.saveAll(List.of(cli1));
-        enderecoRepository.saveAll(Arrays.asList(e1, e2));
+        cli2.getEnderecos().add(e3);
+
+        clienteRepository.saveAll(List.of(cli1, cli2));
+        enderecoRepository.saveAll(Arrays.asList(e1, e2, e3));
 
         SimpleDateFormat sdf = new SimpleDateFormat("dd/MM/yyyy HH:mm");
 
